# Javid_S2P_codes

./: README.md
DataST/: DataStructureTransform.py  README.md  UtilsForTransformation.py  environment.yaml  pyproject.toml  testsForConversion.py
DataST/src/s2p_to_yaksi_datastructure/: DataStructureTransform.py  UtilsForTransformation.py  __init__.py  __main__.py  testsForConversion.py
FileConversion/: SciScan_raw2tif_macro.ijm
